Checks only new mail. Added sqlite storage. Added rar support. Doesn't crash on command errors.

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -4,7 +4,7 @@ config:
   notifyjid: owner@example.com
   notifyresource: Adium.*
   periodiccommands: [ 'vnstat' ]
-	logpath: '/tmp/omnibot.log'
+	#logpath: '/tmp/omnibot.log'
   mails:
     - user: foobar@example.com
       password: secret
